// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should show correct (shallow) 1`] = `
<div>
  <h2>
    Hello
  </h2>
  <hr />
  <Link
    href="/"
  >
    <a
      style={
        Object {
          "marginRight": 15,
        }
      }
    >
      Home
    </a>
  </Link>
  <Link
    href="/about"
  >
    <a
      style={
        Object {
          "marginRight": 15,
        }
      }
    >
      About
    </a>
  </Link>
</div>
`;

exports[`Header should show correct 1`] = `
<div>
  <h2>
    Hello
  </h2>
  <hr />
  <a
    href="/"
    onClick={[Function]}
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    Home
  </a>
  <a
    href="/about"
    onClick={[Function]}
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    About
  </a>
</div>
`;
